@@ -12,6 +12,8 @@ netcfg (0.65) UNRELEASED; urgency=low
       the same as what we suggest for the gateway, nuke the last part of
       the dotted quad because gateway == IP makes no sense. (Closes: #241490)
     - Turn off backup for error messages in static configuration.
+    - Bake all of the getif* functions into one big char**-returning jelly
+      roll, get_all_ifs().
   * Bastian Blank
     - Make it buildable again on s390.
 
